@startuml convert.status.visitable

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram imcludes
!include convert.status.puml

' class diagram (https://plantuml.com/class-diagram)
$package(plaintext.convert.status.visitable) {
    class FloorCellStatusConverter {
        + serialize(floorStatus: FloorCellStatus): String
        + parse(data: String): FloorCellStatus
    }
    plaintext.convert.status.VisitableCellStatusConverter <|-- FloorCellStatusConverter : <<bind>> <T -> FloorCellStatus>

    class FormCellStatusConverter {
        + serialize(formStatus: FormCellStatus): String
        + parse(data: String): FormCellStatus
    }
    plaintext.convert.status.VisitableCellStatusConverter <|-- FormCellStatusConverter : <<bind>> <T -> FormCellStatus>

    class SheetCellStatusConverter {
        + serialize(sheetStatus: SheetCellStatus): String
        + parse(data: String): SheetCellStatus
    }
    plaintext.convert.status.VisitableCellStatusConverter <|-- SheetCellStatusConverter : <<bind>> <T -> SheetCellStatus>

    class FinishCellStatusConverter {
        + serialize(finishStatus: FinishCellStatus): String
        + parse(data: String): FinishCellStatus
    }
    plaintext.convert.status.VisitableCellStatusConverter <|-- FinishCellStatusConverter : <<bind>> <T -> FinishCellStatus>
}

@enduml
